<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="action_settings">Settings</string>
    <!-- Pref -->
    <string name="prefs_theme_key">theme</string>
    <!-- Navigation bar names -->
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_new_contact">New contact</string>
    <string name="nav_setting">Settings</string>
    <!-- Other -->
    <string name="other_wip">WIP</string>
    <!-- Add User Toolbar -->
    <string name="add_user_cancel">Cancel</string>
    <string name="add_user_save">Save</string>
    <string name="add_user_title">Add user</string>
    <!-- Add user names -->
    <string name="add_user_firstname">First name</string>
    <string name="add_user_lastname">Last name</string>
    <string name="add_user_surname">Surname</string>
    <string name="add_user_phonenumber">Phone</string>
    <string name="add_user_mail">Email</string>
    <string name="add_user_error_names">Firstname or lastname or Surname must be filled</string>
    <string name="add_user_ok">Contact added</string>
    <string name="add_user_picture">Contact Image</string>
    <!-- Modify User Toolbar -->
    <string name="modify_user_title">Modify user</string>
    <!-- Setting Toolbar -->
    <string name="settings_cancel">Cancel</string>
    <string name="settings_save">Save</string>
    <string name="settings_title">Settings</string>
    <!-- Setting names -->
    <string name="settings_header_color">Header Color :</string>
    <string-array name="settings_color_choice">
        <item>Blue</item>
        <item>Red</item>
        <item>Yellow</item>
    </string-array>
    <!-- Display Contact -->
    <string name="display_user_return">Return</string>
    <string name="display_user_title">Contact info</string>
    <string name="display_firstname">First name : </string>
    <string name="display_lastname">Last name : </string>
    <string name="display_surname">Surname : </string>
    <string name="display_phonenumber">Phone : </string>
    <string name="display_mail">Email : </string>
    <!-- Display Menu -->
    <string name="menu_display_modify">Modify</string>
    <string name="menu_display_delete">Delete</string>
    <!-- Contact Grid -->
    <string name="grid_contact_pic_desc">Contact Picture</string>
    <!-- Message Panel toolbar-->
    <string name="message_panel_description">Messages</string>
    <string name="message_panel_return">Return</string>
    <string name="message_panel_view">View contact</string>
    <string name="message_panel_phone">Phone</string>
    <string name="message_panel_input_hint">Type your message</string>
    <string name="message_panel_input_send_msg">Send</string>
    <!-- Msg Notification toolbar-->
    <string name="msg_notif_channel_name">Message Notification</string>
    <string name="msg_notif_channel_description">Alert about received message</string>
</resources>
