<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_add_user"
        tools:context=".AddUserActivity"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/add_user_firstname" app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/add_user_firstname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.1"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:layout_marginTop="32dp"/>
        <EditText
                android:hint="@string/add_user_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/add_user_lastname" app:layout_constraintStart_toStartOf="@+id/add_user_firstname"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/add_user_firstname"
                app:layout_constraintEnd_toEndOf="@+id/add_user_firstname"
        />
        <EditText
                android:hint="@string/add_user_phonenumber"
                android:inputType="phone"
                android:ems="10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/add_user_phone" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/add_user_surname"
                app:layout_constraintStart_toStartOf="@+id/add_user_surname"
                app:layout_constraintEnd_toEndOf="@+id/add_user_surname"
        />
        <EditText
                android:hint="@string/add_user_mail"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/add_user_email" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/add_user_phone"
                app:layout_constraintStart_toStartOf="@+id/add_user_phone"
                app:layout_constraintEnd_toEndOf="@+id/add_user_phone"
        />
        <EditText
                android:hint="@string/add_user_surname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/add_user_surname" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/add_user_lastname"
                app:layout_constraintStart_toStartOf="@+id/add_user_firstname"
                app:layout_constraintEnd_toEndOf="@+id/add_user_lastname"
        />
        <TextView
                android:text="@string/add_user_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_user_contact_image_text" app:layout_constraintStart_toStartOf="@+id/add_user_email"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@+id/add_user_email"/>
        <ImageView
                android:clickable="true"
                android:layout_width="96dp"
                android:layout_height="96dp" app:srcCompat="@android:drawable/btn_star"
                android:id="@+id/add_user_image" app:layout_constraintStart_toEndOf="@+id/add_user_contact_image_text"
                app:layout_constraintTop_toTopOf="@+id/add_user_contact_image_text"
                app:layout_constraintBottom_toBottomOf="@+id/add_user_contact_image_text"
                app:layout_constraintEnd_toEndOf="@+id/add_user_email" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>