<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_display_contact"
        tools:context=".DisplayContactActivity"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="0dp"
                android:text="@string/display_firstname"
                android:layout_height="wrap_content"
                android:id="@+id/display_user_firstname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.1"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/display_user_image"
                android:layout_marginTop="24dp"/>
        <TextView
                android:layout_width="0dp"
                android:text="@string/display_lastname"
                android:layout_height="wrap_content"
                android:id="@+id/display_user_lastname"
                app:layout_constraintStart_toStartOf="@+id/display_user_firstname"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/display_user_firstname"
                app:layout_constraintEnd_toEndOf="@+id/display_user_firstname"
        />
        <TextView
                android:ems="10"
                android:text="@string/display_phonenumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/display_user_phone" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/display_user_surname"
                app:layout_constraintStart_toStartOf="@+id/display_user_surname"
                app:layout_constraintEnd_toEndOf="@+id/display_user_surname"
        />
        <TextView
                android:ems="10"
                android:text="@string/display_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/display_user_email" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/display_user_phone"
                app:layout_constraintStart_toStartOf="@+id/display_user_phone"
                app:layout_constraintEnd_toEndOf="@+id/display_user_phone"
        />
        <TextView
                android:layout_width="0dp"
                android:text="@string/display_surname"
                android:layout_height="wrap_content"
                android:id="@+id/display_user_surname" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/display_user_lastname"
                app:layout_constraintStart_toStartOf="@+id/display_user_firstname"
                app:layout_constraintEnd_toEndOf="@+id/display_user_lastname"
        />
        <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp" app:srcCompat="@android:drawable/btn_star"
                android:id="@+id/display_user_image" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>