<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddUserActivity">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_add_user"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                    android:id="@+id/toolbar_add_user_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_marginRight="16dp"
                    android:text="@string/add_user_save"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_gravity="end" />

            <TextView
                    android:id="@+id/toolbar_add_user_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/add_user_cancel"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_gravity="start" />

            <TextView
                    android:id="@+id/toolbar_add_user_title"
                    android:text="@string/add_user_title"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textSize="24sp" android:textStyle="bold"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_add_user"/>

</android.support.design.widget.CoordinatorLayout>